# i3_c_bar

./: .gitignore  CMakeLists.txt  Makefile  Project.ede  bar  config.h  helpers.c  helpers.h  main.c  project.el
skb/: config.mk  skb.c  skb.h
